[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "cosmics-auth"
version = "0.1.0"
description = "Reusable Authentik OAuth2 / OIDC auth for FastAPI apps"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.110.0",
    "httpx>=0.27.0",
    "python-jose[cryptography]>=3.3.0",
    "authlib>=1.3.0",
    "pydantic-settings>=2.0.0",
]

[project.optional-dependencies]
dev = ["pytest", "pytest-asyncio", "httpx"]

[tool.hatch.build.targets.wheel]
packages = ["src/cosmics_auth"]
